# c-snake

./: .gitignore  CMakeLists.txt  README.md  main.c  win32-build.bat
include/: food.h  game.h  grid.h  point.h  renderer.h  snake.h
src/: food.c  game.c  grid.c  main.c  renderer.c  snake.c
